--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +18,7 @@
         JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 <div id="app"></div>
+<div id="modals"></div>
 <!-- built files will be auto injected -->
 </body>
 </html>
